k8s/patches/traefik-certs.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  template:
    spec:
      volumes:
        - name: certs
          secret:
            name: traefik-certs
      containers:
        - name: traefik
          volumeMounts:
            - mountPath: /etc/traefik/certs/
              name: certs
