k8s/patches/traefik-nodeport.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - name: http
      nodePort: 30080
    - name: https
      nodePort: 30443
