k8s/patches/traefik.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  labels:
    name: traefik
spec:
  rules:
    - host: test.k8s.adyanth.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: traefik
                port:
                  name: http
